--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.2",
+        "datatables.net-bs5": "^1.13.8",
+        "datatables.net-responsive-bs5": "^2.5.0",
+        "datatables.net-searchbuilder-bs5": "^1.6.0",
+        "toastr": "^2.1.4"
     }
 }
